添加了界面的章节说明

--- a/docs/bookdown.tex
+++ b/docs/bookdown.tex
@@ -171,7 +171,7 @@
 
 \title{rBAS使用文档}
 \author{王江宇}
-\date{2018-08-19}
+\date{2018-08-20}
 
 \usepackage{amsthm}
 \newtheorem{theorem}{Theorem}[chapter]
@@ -224,6 +224,8 @@
 \item
   第 \ref{examples}
   章主要介绍的是BAS及变体算法\textbf{在各种领域的应用}，当然，少不了对应的案例描述和代码。\textbf{可能有些涉及到各位作者的研究，不会做到完全的开源}，但在\textbf{李帅}老师的组织下，我相信这会是最完善全面的\texttt{BAS}应用大全。
+\item
+  第 \ref{interface} 章介绍了\texttt{rBAS}中的用户界面的调用，以及运行。
 \item
   第 \ref{updates}
   章讲述了\texttt{rBAS}包的\textbf{开发和使用手册更新的计划}。因为算法总是会不断地推陈出新，所以\texttt{rBAS}包也必须和目前的研究保持一致。如果你有好的想法，可以看此章的内容，然后把自己的建议传达给我们。
