--- a/index.Rmd
+++ b/index.Rmd
@@ -31,6 +31,8 @@ github-repo: jywang2016/rBAS
 
 - 第 \@ref(examples) 章主要介绍的是BAS及变体算法**在各种领域的应用**，当然，少不了对应的案例描述和代码。**可能有些涉及到各位作者的研究，不会做到完全的开源**，但在**李帅**老师的组织下，我相信这会是最完善全面的`BAS`应用大全。
 
+- 第 \@ref(interface) 章介绍了`rBAS`中的用户界面的调用，以及运行。
+
 - 第 \@ref(updates) 章讲述了`rBAS`包的**开发和使用手册更新的计划**。因为算法总是会不断地推陈出新，所以`rBAS`包也必须和目前的研究保持一致。如果你有好的想法，可以看此章的内容，然后把自己的建议传达给我们。
 
 >好了，冗长的章节介绍完毕。大家可以开始浏览正文了。
