多杆机构优化案例笔误修改第一次

--- a/05-examples.Rmd
+++ b/05-examples.Rmd
@@ -1,6 +1,6 @@
 # BAS案例一:多杆机构优化问题  {#examples}
 
-说明：由于自身专业知识局限，在整理转述各位研究者或贡献者所提供的材料时，我可能无法准确地表达出对应领域的知识要点。避免言多必失，我仅仅做简要的翻译或者是介绍。对于读者而言，如果觉得并不能解你之疾，或没有**挠到痒处**，建议直接和对应的作者联系。对于贡献者而言，如果我表示有误，欢迎提出建议，或者在github上`pull request`。
+说明：由于自身专业知识局限，在整理转述各位研究者或贡献者所提供的材料时，我可能无法准确地表达出对应领域的知识要点。避免言多必失，我仅仅做简要的翻译或者是介绍。对于读者而言，如果觉得并不能解你之疾，或没有**挠到痒处**，建议直接和对应的作者联系。对于贡献者而言，如果我表述有误，欢迎提出建议，或者在github上`pull request`。
 
 > 由群友莫小娟博士研究生提供案例。
 
@@ -449,7 +449,7 @@ $$
 &(-1.0,2.8284),(-1.3251,2.4600),(-1.5922,2.0622), \notag \\
 &(-1.7844,1.6539),(-1.8872,1.2654),(-1.8942,0.9448), \notag \\
 &(-1.8096,0.7665),(-1.6349,0.8522),(-1.1587,1.6081)\} \notag \\
-\{\delta_2^i\} = \{&0,15,40,60,80,100,120,140,160,180,\notag \\
+\{\theta_2^i\} = \{&0,15,40,60,80,100,120,140,160,180,\notag \\
 & 200, 220,240,260,280,300,320,345\} \notag \\
 & \rightarrow \theta_2^i = \theta_2 + \delta_2^i \notag \\
 \end{align}
